objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_types__c</fullName>
        <formula>TEXT(Parent.Type) &amp; &apos;-&apos; &amp;  TEXT(Parent.Type_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case types</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ coché si le mail correspond à un envoi en masse suite à un import de client manuel dans l&apos;objet list email custom</description>
        <label>Mass email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataRecovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Email_Title__c</fullName>
        <label>Mass Email Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_message_handling_time__c</fullName>
        <formula>(MessageDate - CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email message handling time (in min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>